welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:5: error: value update is not a member of java.awt.Color
		getCouleurSol()=T(i-1);
                ^