welcome.lessons.welcome.array.basics.Array2.scala.code
override def run() {
	var T=new Array[Color](getMondeHauteur())
	for (i <- 1 to getMondeHauteur()) {
		avance();
		getCouleurSol()=T(i-1);
	}
}
